--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
     <meta charset="UTF-8" />
-    <title>ติดต่อเรา</title>
+    <title>contact</title>
     <style>
         * {
             box-sizing: border-box;
