--- a/Product.html
+++ b/Product.html
@@ -145,7 +145,7 @@
     <a href="Product.html">สินค้าทั้งหมด</a>
     <a href="Best selling products.html">สินค้าขายดี</a>
     <a href="promotion.html">โปรโมชั่น</a>
-    <a href="promotion.html">ติดต่อเรา</a>
+    <a href="contact.html">ติดต่อเรา</a>
 </div>
 <br>
 <br>
