--- a/Best selling products.html
+++ b/Best selling products.html
@@ -1,49 +1,63 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>สินค้าขายดี</title>
+
     <style>
         * {
             box-sizing: border-box;
         }
+
         body {
             font-family: Tahoma, sans-serif;
             background-color: #f0f0f0;
             padding: 20px;
+            margin: 0;
             color: #333;
         }
+
         h1 {
             text-align: center;
+            margin-top: 120px;
         }
+
+        /* Navbar */
         .navbar {
             background: #696969;
             width: 100%;
             display: flex;
+            justify-content: center;
             border-radius: 10px;
-            text-align: center;
             padding: 20px;
-            z-index: 999;
             position: fixed;
             top: 0;
+            z-index: 999;
         }
+
         .navbar a {
-            background: #ffffff;
+            background: #fff;
             padding: 8px 10px;
             margin: 0 10px;
             text-decoration: none;
             border-radius: 10px;
             color: #333;
+            transition: background 0.3s ease;
         }
+
         .navbar a:hover {
             background: #d3d3d3;
         }
+
+        /* สินค้าขายดี */
         .car-list {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            margin-top: 100px;
+            margin-top: 30px;
         }
+
         .car-item {
             background: #fff;
             border: 1px solid #ccc;
@@ -55,6 +69,7 @@
             text-align: center;
             position: relative;
         }
+
         .car-item img {
             width: 100%;
             height: 150px;
@@ -62,31 +77,24 @@
             border-radius: 6px;
         }
 
-        /* Style สำหรับป้าย "ขายดี" */
+        /* Badge ขายดี */
         .badge {
             position: absolute;
             top: 10px;
             left: 10px;
-            background-color: red; /* สีแดง */
+            background: red;
             color: white;
             padding: 5px 10px;
             font-size: 14px;
             border-radius: 5px;
             font-weight: bold;
-            animation: bounce 0.5s infinite alternate; /* การเคลื่อนไหว */
+            animation: bounce 0.5s infinite alternate;
         }
 
-        /* การเคลื่อนไหวที่ทำให้ป้ายเด้ง */
         @keyframes bounce {
-            0% {
-                transform: translateY(0);
-            }
-            50% {
-                transform: translateY(-10px);
-            }
-            100% {
-                transform: translateY(0);
-            }
+            0%   { transform: translateY(0); }
+            50%  { transform: translateY(-10px); }
+            100% { transform: translateY(0); }
         }
 
         .buy-btn {
@@ -97,18 +105,23 @@
             margin-top: 10px;
             cursor: pointer;
             border-radius: 5px;
+            transition: background 0.3s ease;
         }
+
         .buy-btn:hover {
             background: #218838;
         }
+
+        /* Cart & History */
         #cart, #history {
-            background: white;
+            background: #fff;
             padding: 20px;
             margin: 30px auto;
             border-radius: 10px;
             max-width: 700px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
+
         .cart-item {
             display: flex;
             justify-content: space-between;
@@ -116,6 +129,7 @@
             border-bottom: 1px solid #ccc;
             padding-bottom: 5px;
         }
+
         .cart-item button {
             background: red;
             color: white;
@@ -124,27 +138,34 @@
             border-radius: 4px;
             cursor: pointer;
         }
+
         .total {
             text-align: right;
             font-weight: bold;
         }
+
         .payment-method {
             margin-top: 20px;
         }
+
         .payment-method label {
             margin-right: 15px;
             cursor: pointer;
         }
+
         .form-group {
             margin-top: 15px;
         }
-        input[type="text"], input[type="email"], input[type="tel"], input[type="date"], select, input[type="number"] {
+
+        input, select {
             width: 100%;
             padding: 8px;
             border-radius: 5px;
             border: 1px solid #ccc;
         }
-        .checkout-btn, .history-btn, .clear-history-btn {
+
+        .checkout-btn,
+        .clear-history-btn {
             margin-top: 15px;
             padding: 10px 15px;
             border: none;
@@ -152,14 +173,16 @@
             color: white;
             cursor: pointer;
         }
+
         .checkout-btn { background: #007bff; float: right; }
-        .history-btn { background: #6c757d; float: left; }
         .clear-history-btn { background: #dc3545; float: right; margin-left: 10px; }
+
         .history-entry {
             border-top: 1px solid #ddd;
             padding-top: 10px;
             margin-top: 10px;
         }
+
         #installment-info {
             margin-top: 5px;
             font-weight: bold;
@@ -167,53 +190,56 @@
         }
     </style>
 </head>
-<body style="background:#FFFFFF;">
+<body>
 
-<div class="navbar">
-    <a href="home.html">หน้าแรก</a>
-    <a href="Product.html">สินค้าทั้งหมด</a>
-    <a href="Best selling products.html">สินค้าขายดี</a>
-    <a href="promotion.html">โปรโมชั่น</a>
-    <a href="contact.html">ติดต่อเรา</a>
-</div>
-<br>
-<br>
-<h1>🔥สินค้าขายดี</h1>
-
-<!-- รายการรถ -->
-<div class="car-list">
-    <div class="car-item">
-        <div class="badge">ขายดี</div>
-        <img src="img/700.jpg" alt="Toyota Camry">
-        <h3>Toyota Camry</h3>
-        <p>ราคา: 850,000 บาท</p>
-        <button class="buy-btn" onclick="addToCart('Toyota Camry', 850000)">เพิ่มลงตะกร้า</button>
-    </div>
-    <div class="car-item">
-        <div class="badge">ขายดี</div>
-        <img src="img/3.jpg" alt="Honda Civic">
-        <h3>Honda Civic</h3>
-        <p>ราคา: 780,000 บาท</p>
-        <button class="buy-btn" onclick="addToCart('Honda Civic', 780000)">เพิ่มลงตะกร้า</button>
-    </div>
-    <div class="car-item">
-        <div class="badge">ขายดี</div>
-        <img src="img/400.jpg" alt="Isuzu D-Max">
-        <h3>Isuzu D-Max</h3>
-        <p>ราคา: 620,000 บาท</p>
-        <button class="buy-btn" onclick="addToCart('Isuzu D-Max', 620000)">เพิ่มลงตะกร้า</button>
-    </div>
-    <div class="car-item">
-        <div class="badge">ขายดี</div>
-        <img src="img/6.jpg" alt="Nissan Almera">
-        <h3>Nissan Almera</h3>
-        <p>ราคา: 510,000 บาท</p>
-        <button class="buy-btn" onclick="addToCart('Nissan Almera', 510000)">เพิ่มลงตะกร้า</button>
+    <!-- Navbar -->
+    <div class="navbar">
+        <a href="home.html">หน้าแรก</a>
+        <a href="Product.html">สินค้าทั้งหมด</a>
+        <a href="Best selling products.html">สินค้าขายดี</a>
+        <a href="promotion.html">โปรโมชั่น</a>
+        <a href="contact.html">ติดต่อเรา</a>
     </div>
 
-</div>
+    <!-- Title -->
+    <h1>🔥 สินค้าขายดี</h1>
 
-<!-- ตะกร้าสินค้า -->
+    <!-- รายการรถ -->
+    <div class="car-list">
+        <div class="car-item">
+            <div class="badge">ขายดี</div>
+            <img src="img/700.jpg" alt="Toyota Camry">
+            <h3>Toyota Camry</h3>
+            <p>ราคา: 850,000 บาท</p>
+            <button class="buy-btn" onclick="addToCart('Toyota Camry', 850000)">เพิ่มลงตะกร้า</button>
+        </div>
+
+        <div class="car-item">
+            <div class="badge">ขายดี</div>
+            <img src="img/3.jpg" alt="Honda Civic">
+            <h3>Honda Civic</h3>
+            <p>ราคา: 780,000 บาท</p>
+            <button class="buy-btn" onclick="addToCart('Honda Civic', 780000)">เพิ่มลงตะกร้า</button>
+        </div>
+
+        <div class="car-item">
+            <div class="badge">ขายดี</div>
+            <img src="img/400.jpg" alt="Isuzu D-Max">
+            <h3>Isuzu D-Max</h3>
+            <p>ราคา: 620,000 บาท</p>
+            <button class="buy-btn" onclick="addToCart('Isuzu D-Max', 620000)">เพิ่มลงตะกร้า</button>
+        </div>
+
+        <div class="car-item">
+            <div class="badge">ขายดี</div>
+            <img src="img/6.jpg" alt="Nissan Almera">
+            <h3>Nissan Almera</h3>
+            <p>ราคา: 510,000 บาท</p>
+            <button class="buy-btn" onclick="addToCart('Nissan Almera', 510000)">เพิ่มลงตะกร้า</button>
+        </div>
+    </div>
+
+    <!-- ตะกร้าสินค้า -->
     <div id="cart">
         <h2>🛒 ตะกร้าสินค้า</h2>
         <div id="cart-items"></div>
@@ -224,10 +250,12 @@
             <label>ชื่อผู้ซื้อ:</label>
             <input type="text" id="buyer-name" placeholder="กรอกชื่อ" required>
         </div>
+
         <div class="form-group">
             <label>เบอร์โทรศัพท์:</label>
             <input type="tel" id="buyer-phone" placeholder="กรอกเบอร์โทร" required>
         </div>
+
         <div class="form-group">
             <label>อีเมล:</label>
             <input type="email" id="buyer-email" placeholder="กรอกอีเมล" required>
@@ -241,18 +269,19 @@
             <label><input type="radio" name="payment" value="ผ่อนชำระ" onclick="toggleInstallment()"> ผ่อนชำระ</label>
         </div>
 
-        <!-- ฟอร์มจำนวนงวดผ่อนชำระ -->
+        <!-- ฟอร์มผ่อนชำระ -->
         <div class="form-group" id="installment-group" style="display:none;">
             <label>จำนวนงวดผ่อน (เดือน):</label>
             <input type="number" id="installment-months" min="1" max="36" placeholder="เช่น 6" onchange="calculateInstallment()">
             <div id="installment-info"></div>
         </div>
 
-        <!-- ส่วนฟอร์มนัดรับรถ -->
+        <!-- ฟอร์มนัดรับรถ -->
         <div class="form-group">
             <label>วันที่นัดรับรถ:</label>
             <input type="date" id="pickup-date" required>
         </div>
+
         <div class="form-group">
             <label>ช่วงเวลานัดรับรถ:</label>
             <select id="pickup-time" required>
@@ -261,7 +290,7 @@
                 <option value="16:00-20:00">16:00-20:00</option>
             </select>
         </div>
-        
+
         <button class="checkout-btn" onclick="checkout()">ยืนยันการสั่งซื้อ</button>
     </div>
 
@@ -272,10 +301,10 @@
         <button class="clear-history-btn" onclick="clearHistory()">ล้างประวัติการซื้อ</button>
     </div>
 
+    <!-- Script -->
     <script>
-        // การทำงานของตะกร้าและการยืนยันการสั่งซื้อ
         let cart = [];
-        
+
         function addToCart(name, price) {
             cart.push({ name, price });
             renderCart();
@@ -302,16 +331,16 @@
         }
 
         function toggleInstallment() {
-            const installmentGroup = document.getElementById('installment-group');
-            installmentGroup.style.display = installmentGroup.style.display === 'none' ? 'block' : 'none';
+            const group = document.getElementById('installment-group');
+            group.style.display = group.style.display === 'none' ? 'block' : 'none';
         }
 
         function calculateInstallment() {
             const totalAmount = cart.reduce((sum, item) => sum + item.price, 0);
-            const installmentMonths = document.getElementById("installment-months").value;
-            if (installmentMonths) {
-                const monthlyInstallment = totalAmount / installmentMonths;
-                document.getElementById("installment-info").textContent = `ยอดผ่อนรายเดือน: ${monthlyInstallment.toFixed(2)} บาท`;
+            const months = document.getElementById("installment-months").value;
+            if (months) {
+                const monthly = totalAmount / months;
+                document.getElementById("installment-info").textContent = `ยอดผ่อนรายเดือน: ${monthly.toFixed(2)} บาท`;
             } else {
                 document.getElementById("installment-info").textContent = '';
             }
@@ -331,6 +360,7 @@
 
             const paymentMethod = document.querySelector('input[name="payment"]:checked').value;
             let installmentMonths = null;
+
             if (paymentMethod === "ผ่อนชำระ") {
                 installmentMonths = document.getElementById("installment-months").value;
                 if (!installmentMonths) {
@@ -350,15 +380,19 @@
                 pickupDate,
                 pickupTime,
                 date: new Date().toISOString(),
-                monthlyInstallment: installmentMonths ? (cart.reduce((sum, item) => sum + item.price, 0) / installmentMonths).toFixed(2) : null
+                monthlyInstallment: installmentMonths
+                    ? (cart.reduce((sum, item) => sum + item.price, 0) / installmentMonths).toFixed(2)
+                    : null
             };
 
             const orderHistory = JSON.parse(localStorage.getItem('orderHistory')) || [];
             orderHistory.push(order);
             localStorage.setItem('orderHistory', JSON.stringify(orderHistory));
+
             cart = [];
             renderCart();
             alert('สั่งซื้อสำเร็จ');
+            renderHistory();
         }
 
         function renderHistory() {
