--- a/contact.html
+++ b/contact.html
@@ -10,19 +10,20 @@
         body {
             font-family: Tahoma, sans-serif;
             background-color: #f0f0f0;
-            padding: 20px;
-            color: #333;
+            margin: 0;
+            height: 100vh; /* ให้เต็มจอ */
+            display: flex;
+            flex-direction: column;
         }
         .navbar {
             background: #696969;
             width: 100%;
             display: flex;
-            border-radius: 10px;
+            justify-content: center;
+            border-radius: 0 0 10px 10px;
             text-align: center;
             padding: 20px;
             z-index: 999;
-            position: fixed;
-            top: 0;
         }
         .navbar a {
             background: #ffffff;
@@ -36,8 +37,14 @@
             background: #d3d3d3;
         }
         main {
+            flex: 1; /* กินพื้นที่เหลือ */
+            display: flex;
+            justify-content: center;
+            align-items: center; /* จัดให้อยู่กลางจอ */
+        }
+        .contact-box {
             max-width: 600px;
-            margin: 120px auto 40px;
+            width: 100%;
             background: white;
             padding: 30px;
             border-radius: 10px;
@@ -92,54 +99,52 @@
         }
     </style>
 </head>
-<body style="background:#FFFFFF;">
+<body>
     <div class="navbar">
         <a href="home.html">หน้าแรก</a>
         <a href="Product.html">สินค้าทั้งหมด</a>
         <a href="Best selling products.html">สินค้าขายดี</a>
         <a href="promotion.html">โปรโมชั่น</a>
         <a href="contact.html">ติดต่อเรา</a>
-	    
     </div>
 
     <main>
-        <h1>ติดต่อเรา</h1>
-        <form id="contact-form">
-            <label for="name">ชื่อ-นามสกุล</label>
-            <input type="text" id="name" name="name" placeholder="กรอกชื่อของคุณ" required>
+        <div class="contact-box">
+            <h1>ติดต่อเรา</h1>
+            <form id="contact-form">
+                <label for="name">ชื่อ-นามสกุล</label>
+                <input type="text" id="name" name="name" placeholder="กรอกชื่อของคุณ" required>
 
-            <label for="email">อีเมล</label>
-            <input type="email" id="email" name="email" placeholder="กรอกอีเมลของคุณ" required>
+                <label for="email">อีเมล</label>
+                <input type="email" id="email" name="email" placeholder="กรอกอีเมลของคุณ" required>
 
-            <label for="phone">เบอร์โทรศัพท์</label>
-            <input type="text" id="phone" name="phone" placeholder="กรอกเบอร์โทรศัพท์" required pattern="[0-9]{9,10}" title="กรุณากรอกเบอร์โทรศัพท์ 9-10 ตัวเลข">
+                <label for="phone">เบอร์โทรศัพท์</label>
+                <input type="text" id="phone" name="phone" placeholder="กรอกเบอร์โทรศัพท์" required pattern="[0-9]{9,10}" title="กรุณากรอกเบอร์โทรศัพท์ 9-10 ตัวเลข">
 
-            <label for="message">ข้อความ</label>
-            <textarea id="message" name="message" placeholder="เขียนข้อความที่ต้องการติดต่อ" required></textarea>
+                <label for="message">ข้อความ</label>
+                <textarea id="message" name="message" placeholder="เขียนข้อความที่ต้องการติดต่อ" required></textarea>
 
-            <button type="submit">ส่งข้อความ</button>
-        </form>
+                <button type="submit">ส่งข้อความ</button>
+            </form>
 
-        <div class="success-message" id="success-message">ส่งข้อความสำเร็จ! เราจะติดต่อกลับโดยเร็วที่สุด</div>
-        <div class="error-message" id="error-message">กรุณากรอกข้อมูลให้ถูกต้องครบถ้วน</div>
+            <div class="success-message" id="success-message">ส่งข้อความสำเร็จ! เราจะติดต่อกลับโดยเร็วที่สุด</div>
+            <div class="error-message" id="error-message">กรุณากรอกข้อมูลให้ถูกต้องครบถ้วน</div>
+        </div>
     </main>
 
     <script>
         document.getElementById('contact-form').addEventListener('submit', function(event) {
             event.preventDefault();
 
-            // ซ่อนข้อความเดิม
             document.getElementById('success-message').style.display = 'none';
             document.getElementById('error-message').style.display = 'none';
 
-            // เช็คความถูกต้องของฟอร์ม
             const form = event.target;
             if (!form.checkValidity()) {
                 document.getElementById('error-message').style.display = 'block';
                 return;
             }
 
-            // ตัวอย่างฟังก์ชันส่งข้อมูล (ตอนนี้แค่โชว์ข้อความสำเร็จ)
             document.getElementById('success-message').style.display = 'block';
             form.reset();
         });
